--- a/GroupProject/WebMVC/Web.config
+++ b/GroupProject/WebMVC/Web.config
@@ -23,6 +23,15 @@
   <system.web>
     <compilation debug="true" targetFramework="4.8"/>
     <httpRuntime targetFramework="4.8" maxRequestLength="2147483647"/>
+    <authentication mode="Forms">
+      <forms loginUrl="Account/Login"></forms>
+    </authentication>
+    <roleManager defaultProvider="myRoleProvider" enabled="true">
+      <providers>
+        <clear/>
+        <add name="myRoleProvider" type="WebMVC.Models.UserRoleProvider"/>
+      </providers>
+    </roleManager>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
