--- a/GroupProject/WebMVC/WebMVC.csproj
+++ b/GroupProject/WebMVC/WebMVC.csproj
@@ -100,6 +100,9 @@
     <None Include="Connected Services\AccountService\WCFAccountService2.xsd">
       <SubType>Designer</SubType>
     </None>
+    <Content Include="Connected Services\AccountService\WebMVC.AccountService.Account.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
     <None Include="Connected Services\BagCategoryService\BagCategoryService.wsdl" />
     <None Include="Connected Services\BagCategoryService\WCFBagCategoryService.disco" />
     <None Include="Connected Services\BagCategoryService\configuration91.svcinfo" />
