--- a/GroupProject/WebMVC/Web.config
+++ b/GroupProject/WebMVC/Web.config
@@ -24,8 +24,9 @@
     <compilation debug="true" targetFramework="4.8"/>
     <httpRuntime targetFramework="4.8" maxRequestLength="2147483647"/>
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Index"></forms>
+      <forms loginUrl="~/Account/Index" timeout="60" slidingExpiration="true"/>
     </authentication>
+    
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
