--- a/GroupProject/WebMVC/bin/WebMVC.dll.config
+++ b/GroupProject/WebMVC/bin/WebMVC.dll.config
@@ -24,7 +24,7 @@
     <compilation debug="true" targetFramework="4.8"/>
     <httpRuntime targetFramework="4.8" maxRequestLength="2147483647"/>
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Index"></forms>
+      <forms loginUrl="~/Account/Index" timeout="60" slidingExpiration="true"/>
     </authentication>
     
   </system.web>
