--- a/GroupProject/WebMVC/WebMVC.csproj
+++ b/GroupProject/WebMVC/WebMVC.csproj
@@ -121,6 +121,9 @@
     <None Include="Connected Services\BagService\WCFBagService3.xsd">
       <SubType>Designer</SubType>
     </None>
+    <Content Include="Connected Services\BagService\WebMVC.BagService.Order.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
     <None Include="Connected Services\FileService\WCFFileService.disco" />
     <None Include="Connected Services\FileService\configuration91.svcinfo" />
     <None Include="Connected Services\FileService\configuration.svcinfo" />
