--- a/GroupProject/WebMVC/WebMVC.csproj
+++ b/GroupProject/WebMVC/WebMVC.csproj
@@ -188,6 +188,7 @@
     </Compile>
     <Compile Include="Controllers\BagController.cs" />
     <Compile Include="Controllers\CartController.cs" />
+    <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
@@ -255,7 +256,6 @@
     <Content Include="Views\Register.cshtml" />
     <Content Include="Views\AccessDenied.cshtml" />
     <Content Include="Views\Cart.cshtml" />
-    <Content Include="Views\ReportOrder.cshtml" />
     <Content Include="Views\OrderHistory.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
